objects/eValuePrompter_Item__c/eValuePrompter_Item__c.object-meta.xml
<CustomObject>
    <description>Used to store questions and viewpoints from the value selling eValuePrompter application.</description>
    <label>eValuePrompter Item</label>
    <nameField>
        <label>eValuePrompter Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>eValuePrompter Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>