objects/eValuePrompter_Item__c/fields/Differentiated__c.field-meta.xml
<CustomField>
    <fullName>Differentiated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Differentiated</label>
    <type>Checkbox</type>
</CustomField>