objects/eValuePrompter_Item__c/fields/eVP_Item_External_ID__c.field-meta.xml
<CustomField>
    <fullName>eVP_Item_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>eVP Item External ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>