objects/eValuePrompter_Item__c/fields/eVP_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>eVP_Last_Updated__c</fullName>
    <label>eVP Last Updated</label>
    <type>DateTime</type>
</CustomField>