objects/eValuePrompter_Item__c/fields/Question_Type__c.field-meta.xml
<CustomField>
    <fullName>Question_Type__c</fullName>
    <label>Question Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Probe</fullName>
            </value>
            <value>
                <fullName>Confirm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>