objects/eValuePrompter_Item__c/fields/Text__c.field-meta.xml
<CustomField>
    <fullName>Text__c</fullName>
    <label>Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>