objects/eValuePrompter_Item__c/fields/Value_Type__c.field-meta.xml
<CustomField>
    <fullName>Value_Type__c</fullName>
    <label>Value Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Personal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>